# pokedis

./: .gitignore  README.md  bot.py  check_data.py  get.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
cogs/: battle.py  main.py  user.py
server/: __init__.py  application.py  blueprint.py  library.py
utils/: __init__.py  api.py  data.py  database.py  helper.py
utils/datafiles/: effective.json  movedata.json  pokedata.json  special_moves.json
